Fixed misalignment of heading

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,7 +38,7 @@ body {
 
 .heading {
     color: #43707d;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     font-family: 'Merriweather', serif;
     font-size: 12px;
     text-decoration: underline;
